--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
