--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-if": "^4.1.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
   },
